Category/LearningTab: fix layout issues

--- a/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.less
@@ -2,13 +2,6 @@
 
 .no-white-background;
 
-#MasterMainContent {
-
-    .media-below-md({
-        padding-top: 10px;
-    });
-}
-
 .navLinks {
 
     float: right;
@@ -190,7 +183,7 @@
     .media-below-sm ({
         margin-bottom:  0;
 
-        & + .row #AnswerBody {
+        & + #AnswerBody, & + .row #AnswerBody {
             border-top: none;
             border-top-left-radius: 0;
             border-top-right-radius: 0;
